project.htmlを新規作成

--- a/project.html
+++ b/project.html
@@ -1,7 +1,9 @@
+
 <!DOCTYPE html>
 <html>
     <head>
         <mata charset="utf-8">
+            <link rel="stylesheet"  href="project.css">
             <title>プロジェクト課題</title>
     </head>
     <body>
