--- a/project.html
+++ b/project.html
@@ -4,17 +4,21 @@
     <head>
         <mata charset="utf-8">
             <link rel="stylesheet"  href="project.css">
+            <script src="gourmet.js" defer></script>
             <title>プロジェクト課題</title>
     </head>
     <body>
-        <h2>NHKの番組表</h2>
+        <h2>八王子市グルメ情報</h2>
         <ul>
-            <li>開始時刻</li>
-            <li>終了時刻</li>
-            <li>チャンネル：NHK総合</li>
-            <li>タイトル：</li>
-            <li>サブタイトル：</li>
-            <li>番組説明：</li>
+            <li>アクセス情報：</li>
+            <li>住所：</li>
+            <li>営業日時：</li>
+            <li>予算：</li>
+            <li>ジャンル：</li>
+            <li>店舗名：</li>
+            <li>最寄駅：</li>
+            <li>キャッチコピー：</li>
+            <li>サブジャンルの名前：</li>
 
         </ul>
     </body>
