15日を新規作成

--- a/project.html
+++ b/project.html
@@ -12,13 +12,13 @@
         <ul>
             <li>アクセス情報：</li>
             <li>住所：</li>
-            <li>営業日時：</li>
+            <li>定休日：</li>
             <li>予算：</li>
             <li>ジャンル：</li>
             <li>店舗名：</li>
-            <li>最寄駅：</li>
+            <li>営業時間：</li>
             <li>キャッチコピー：</li>
-            <li>サブジャンルの名前：</li>
+            <li>おすすめポイント：</li>
 
         </ul>
     </body>
