15日新規作成

--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
           target="_blank">演習3-6.オブジェクトの参照</a>
         </p>
         <h3>第4回DOMとJavaScript</h3>
+        <p>
+          今回の授業はjavascriptを使ってイベント処理の仕方を学びました。要素のテキストを参照することを忘れてしまいがいちなので気をつけたいと思いました。
+          また、変数を定義される前にその変数を使ったコードを書いてしまい、なかなか結果が出ないことがあったのでコードの順番に気をつけます。
+        </p>
+
+        <p> 演習の成果：
+          <a href="practice-eventdom/tashizan.html"
+          title="tashizan.html"
+          target="_blank">演習4-10.足し算ページ</a>
+        </p>
         <h3>第5回イベント処理</h3>
 
       </div>
