--- a/kazuate.html
+++ b/kazuate.html
@@ -9,7 +9,7 @@
   <body>
     <h1>数当てゲーム</h1>
     <p>将来ここにはテキストボックスとボタンを設置します</p>
-    <label for="kazuate">1から10の間の整数：</label> //
+    <label for="kazuate">1から10の間の整数：</label> <!---aaa-->
     <input type="text" name="suuzi" id="kazuate" size="10">
     <p><span id="kaisu">1</span>回目の予想: <span id="answer">4</span></p>
     <p id="result">将来ここに判定結果を表示します</p>
