28日新規作成

--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
           target="_blank">演習4-10.足し算ページ</a>
         </p>
         <h3>第5回イベント処理</h3>
+        <p>
+          今回の授業はjavascriptを使って要素の追加、編集、削除とオブジェクトの表示を学びました。要素の証言の仕方はよく理解できたと思います。
+          どちらの要素の前か後にもう一方の要素が来るのかを記入することと、「’’」や「””」を抜け忘れることがあるので気をつけます。
+        <p>
+          演習の成果：
+          <a href="practice-dom2/dom2-exercise.html"
+           title="dom2-exercise.js"
+           target="_blank"> 演習5-7.DOMプログラミング</a>
+           </p>
+        </p>
 
       </div>
         
