--- a/practice-dom2/dom2-intro.html
+++ b/practice-dom2/dom2-intro.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+	<meta charset="utf-8">
+	<script src="dom2-intro.js" defer></script>
     <title>DOMを操作するJSプログラム</title>
   </head>
 
