--- a/project.html
+++ b/project.html
@@ -9,6 +9,10 @@
     </head>
     <body>
         <h2>八王子市グルメ情報</h2>
+
+        <label for="gurume">検索キー：</label> <!---aaa-->
+    <input type="text" name="yoso" id="kazuate" size="10">
+    <button id="check">検索</button>
         <ul>
             <li>アクセス情報：</li>
             <li>住所：</li>
