6月５日新規作成

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div>
       <h2>プロジェクト課題について</h2>
-      <p>（ここには皆さんが取り組んだプロジェクト課題について書きましょう.）（200文字以上</p>
+      <p>プロジェクト課題は、グルメサイトを作成した。セレクト要素で出したい料理のジャンルを選択し、検索ボタンを押すと該当するジャンルを表示する。スイッチを押した後に検索を開始して該当する回答の全てを出力する。検索でてきたものはdiv#resultの中に表示をする。2回目の表示をするときは1回目の検索で出てきたものは消してから表示をする。URLをjsで繋げてからネット検索をできるように調整する。</p>
    
     <p>
         プロジェクト課題で作成したページ：
@@ -94,6 +94,13 @@
            title="dom2-exercise.js"
            target="_blank"> 演習5-7.DOMプログラミング</a>
            </p>
+        </p>
+
+        <h3>
+          工夫点，苦心点，強調点，感想
+        </h3>
+        <p>
+          難しかった点は数え切れないほどありますが、３つ挙げたいと思います。１つ目は、2回目以降検索した時に前の表示を消すことです。ボタンが押された時のアクションの最初にするのか実行が終わった後にコードを書けばいいのかわからず、かなり手こずりました。If文で消そうとしても上手くいかなくてfor文との併用で消えるところまで考えるのがとても難しかったです。２つ目は、検索件数の表示です。ボタンを時効した時にカウントする変数を０にしただけだと、なぜか一件目の表示が消えなくて困りました。解決方法は、１つ目と同じようにremoveをしたら綺麗に消えて、頑張って色々試行錯誤していたので、正直キレました。3つ目は、URLを取り込むときに、選択で選ばれた項目を文字列に当てはめてリンクと繋げることです。最初は何をどうすればURLと繋げられるか分からず、講義資料に書いてあるコードを確認して解決することができました。検索に入れる文字列を出すまでに３つの変数を使ったところが自分では考えつくことができず、大変でした。工夫した点としては、２つあります。１つ目は、背景にフリー素材の画像を挿入してみたところです。コードはサイトで調べて書きました。初期だと画像の左側からしか写らなかったですが、調節して真ん中に合わせることができました。背景が画像になるこで、抜け感があり、本物のサイトみたいになってテンションが上がりました。Jsを書き終わった後に手をつけたので、自分の感覚だけで作ることができるので、楽しかったです。背景が隠れてしまうと勿体無いのでboxは不透明度を下げて表示しました。２つ目は、li要素の点の削除です。左の項目の点がずっと気になっていたのでcs で消えることを知って、実践してみました。Jsを使ってのli要素の削除がよく分からなかったので、csは便利だなと思いました。最後に感想として、一言で言うととても難しかったです。6回の中でHTMLからJSにCSSを詰め込んで、かなりペースも早かったので、追いつくのが大変でした。個人的にはJAVAscriptが一番大変でした。Web開発ツールで確認しながら作っていくことにもなかなか慣れずに、同期ボタンを押してしまった時の絶望は忘れられません。また、実行の方も上から順に実行され得ていくので、順番も気にしないといけないのが大変でした。WEBページが作れるようになったので、忘れないようにして行かないようにしたいと思いまた。
         </p>
 
       </div>
